crates/oxc_react_compiler/tests/snapshots/error.invalid-access-ref-in-render-mutate-object-with-ref-function.snap
---
source: crates/oxc_react_compiler/tests/snapshot.rs
input_file: crates/oxc_react_compiler/fixtures/error.invalid-access-ref-in-render-mutate-object-with-ref-function.js
---
Diagnostics:

OxcDiagnostic { inner: OxcDiagnosticInner { message: "[ReactCompiler] Refs: Cannot access refs during render", labels: [LabeledSpan { label: Some("This function accesses a ref value"), span: Span { start: 156, end: 166 }, primary: false }], help: Some("React refs are values that are not needed for rendering. Refs should only be accessed outside of render, such as in event handlers or effects. Accessing a ref value (the `current` property) during render can cause your component not to update as expected (https://react.dev/reference/react/useRef)"), note: None, severity: Error, code: OxcCode { scope: None, number: None }, url: None } }

No changes.
